Fix layout problems and add global CSS file
- Fix repositioned pages when navigating to pages with no scrollbar
- Change Footer to be sticky
- Enable react-router Outlet components to stretch using flex property
- Move Hero images and refactor image URLs into global CSS variables

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -3,3 +3,12 @@
   --hero-tablet: url(./assets/xbox-controller.jpg);
   --hero-mobile: url(./assets/retro-arcade.jpg);
 }
+
+body {
+  min-width: 320px;
+  overflow-y: scroll;
+}
+
+#root {
+  min-height: 100vh;
+}
