--- a/frontend/src/pages/styles/ErrorPage.module.css
+++ b/frontend/src/pages/styles/ErrorPage.module.css
@@ -1,9 +1,10 @@
 .root {
-  padding-block: rem(80px);
-  padding-bottom: rem(120px);
-  background-color: var(--mantine-color-blue-filled);
+  background-color: var(--mantine-color-coyote-blue-filled);
+  flex: 1; /* Stretch component from header to footer */
 
-  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .label {
@@ -12,7 +13,7 @@
   font-size: rem(220px);
   line-height: 1;
   margin-bottom: calc(var(--mantine-spacing-xl) * 1.5);
-  color: var(--mantine-color-blue-3);
+  color: var(--mantine-color-coyote-blue-3);
 
   @media (max-width: $mantine-breakpoint-sm) {
     font-size: rem(120px);
@@ -36,5 +37,5 @@
   margin: auto;
   margin-top: var(--mantine-spacing-xl);
   margin-bottom: calc(var(--mantine-spacing-xl) * 1.5);
-  color: var(--mantine-color-blue-1);
+  color: var(--mantine-color-coyote-blue-1);
 }
